# kickstat

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SETUP.md  app_dashboard.py  com.kickstat.daily.plist  docker-compose.yml  generate_predictions_json.py  pyproject.toml  render.yaml  test_football_data_org.py  test_predictions_direct.py
api/: README.md  main.py  requirements.txt  test_fixtures.json
backend/: .env.example  DATA_FLOW.md  Dockerfile  requirements-prod.txt  requirements.txt
claude/: Football_Prediction_Spec.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
notebooks/: 01_data_collection.ipynb  01_data_collection_executed.ipynb  02_dixon_coles_fit.ipynb  02_dixon_coles_fit_executed.ipynb  03_elo_fit.ipynb  03_elo_fit_executed.ipynb  04_ensemble_calibration.ipynb  04_ensemble_calibration_executed.ipynb  05_backtest.ipynb  06_edge_analysis.ipynb
outputs/: combine_ligue1_01fev.txt  combine_safe_80pct.txt  lorient_nantes_analysis.txt  monaco_rennes_analysis.txt  player_impact_analysis.txt  psg_analysis.txt  psg_key_players_real_data.txt  psg_players_stats.json  psg_strasbourg_analysis.txt  value_bets_2025_02_01.txt
scripts/: backtest_full_pipeline.py  backtest_multi_market.py  backtest_with_odds.py  bankroll_realistic.py  bankroll_simulation.py  collect_odds.py  collect_psg_player_stats.py  daily_predictions.ps1  daily_predictions.sh  fetch_results.py  optimize_all.py  optimize_market.py  setup_scheduler.ps1  sync_history.py  sync_predictions.py  test_hypotheses.py  test_props_detailed.py  (+2 more)
(+208 files in other folders)
