[project]
name = "football-predictions"
version = "0.1.0"
description = "Football match prediction system with validated edge detection"
requires-python = ">=3.11"

dependencies = [
    # Data
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",

    # ML
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",

    # Notebooks
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Utils
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
